force-app/main/default/objects/RD_Part_Parameters_ASME__c/RD_Part_Parameters_ASME__c.object-meta.xml
<CustomObject>
    <label>RD Part Parameters ASME</label>
    <nameField>
        <label>RD Part Parameters ASME</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Part Parameters ASME</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>