force-app/main/default/objects/RD_Part_Parameters_ASME__c/fields/ASMECertNo__c.field-meta.xml
<CustomField>
    <fullName>ASMECertNo__c</fullName>
    <label>ASMECertNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>