force-app/main/default/objects/RD_Part_Parameters_ASME__c/fields/ASMEInletOption__c.field-meta.xml
<CustomField>
    <fullName>ASMEInletOption__c</fullName>
    <label>ASMEInletOption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>