force-app/main/default/objects/RD_Part_Parameters_ASME__c/fields/HIC__c.field-meta.xml
<CustomField>
    <fullName>HIC__c</fullName>
    <label>HIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>