force-app/main/default/objects/RD_Part_Parameters_ASME__c/fields/KDValueLiquid__c.field-meta.xml
<CustomField>
    <fullName>KDValueLiquid__c</fullName>
    <label>KDValueLiquid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>