force-app/main/default/objects/RD_Part_Parameters_ASME__c/fields/KR_Text__c.field-meta.xml
<CustomField>
    <fullName>KR_Text__c</fullName>
    <label>KR_Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>