force-app/main/default/objects/RD_Part_Parameters_ASME__c/fields/MNFAin2__c.field-meta.xml
<CustomField>
    <fullName>MNFAin2__c</fullName>
    <label>MNFAin2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>