force-app/main/default/objects/RD_Part_Parameters_ASME__c/fields/MNFAValue__c.field-meta.xml
<CustomField>
    <fullName>MNFAValue__c</fullName>
    <label>MNFAValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>