force-app/main/default/objects/RD_Part_Parameters_ASME__c/fields/SizingCertText__c.field-meta.xml
<CustomField>
    <fullName>SizingCertText__c</fullName>
    <label>SizingCertText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>