force-app/main/default/objects/RD_Part_Parameters_ASME__c/fields/SizingKrText__c.field-meta.xml
<CustomField>
    <fullName>SizingKrText__c</fullName>
    <label>SizingKrText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>